--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:workout-tracker": "node dist/workout-tracker/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +21,6 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
-    "@angular/ssr": "^18.1.0",
     "echarts": "^5.5.1",
     "echarts-gl": "^2.0.9",
     "express": "^4.18.2",
