--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,10 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/_redirects",
+              "src/web.config",
               {
                 "glob": "**/*",
                 "input": "public"
