--- a/Client/package.json
+++ b/Client/package.json
@@ -20,13 +20,16 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "apollo-angular": "^7.0.2",
     "echarts": "^5.5.1",
     "echarts-gl": "^2.0.9",
     "express": "^4.18.2",
     "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.1.0",
